Add reorderLayers function

--- a/spriteMaker/spriteMaker/PopupStoryboards/ColorPaletteListPopup.storyboard
+++ b/spriteMaker/spriteMaker/PopupStoryboards/ColorPaletteListPopup.storyboard
@@ -166,7 +166,7 @@
                                                         </textField>
                                                     </subviews>
                                                     <constraints>
-                                                        <constraint firstAttribute="trailing" secondItem="UQf-id-5aj" secondAttribute="trailing" constant="8" id="0ul-3I-D1S"/>
+                                                        <constraint firstAttribute="trailing" secondItem="UQf-id-5aj" secondAttribute="trailing" priority="250" constant="8" id="0ul-3I-D1S"/>
                                                         <constraint firstItem="UQf-id-5aj" firstAttribute="top" secondItem="gOr-Kx-KKR" secondAttribute="bottom" constant="5" id="1lo-25-DJt"/>
                                                         <constraint firstItem="dhc-6D-HNn" firstAttribute="width" secondItem="gOr-Kx-KKR" secondAttribute="width" id="ATq-A4-uAd"/>
                                                         <constraint firstAttribute="bottom" secondItem="3Jv-PP-FWM" secondAttribute="bottom" constant="8" id="ENN-qe-uqx"/>
@@ -190,6 +190,7 @@
                                                     <outlet property="deleteButton" destination="3Jv-PP-FWM" id="YfO-ub-Wyu"/>
                                                     <outlet property="paletteLabel" destination="dhc-6D-HNn" id="WV7-LK-LXz"/>
                                                     <outlet property="paletteTextField" destination="gOr-Kx-KKR" id="2Ds-sJ-3ZJ"/>
+                                                    <outlet property="superView" destination="HLf-9h-5Lz" id="Hwu-tS-QgK"/>
                                                 </connections>
                                             </collectionViewCell>
                                         </cells>
