--- a/spriteMaker/spriteMaker/PopupStoryboards/AnimatedPreviewPopupViewController.storyboard
+++ b/spriteMaker/spriteMaker/PopupStoryboards/AnimatedPreviewPopupViewController.storyboard
@@ -51,30 +51,30 @@
                                 </connections>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jxw-K6-M5b">
-                                <rect key="frame" x="25.5" y="247" width="149" height="223.5"/>
+                                <rect key="frame" x="25.5" y="247" width="130.5" height="150"/>
                                 <subviews>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="V81-g5-gZ6">
-                                        <rect key="frame" x="10" y="10" width="129" height="203.5"/>
+                                        <rect key="frame" x="10" y="0.0" width="110.5" height="150"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="HGt-0D-QsO">
-                                            <size key="itemSize" width="133" height="74"/>
-                                            <size key="headerReferenceSize" width="50" height="70"/>
+                                            <size key="itemSize" width="105.5" height="52"/>
+                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                            <inset key="sectionInset" minX="0.0" minY="10" maxX="0.0" maxY="0.0"/>
+                                            <inset key="sectionInset" minX="0.0" minY="10" maxX="0.0" maxY="10"/>
                                         </collectionViewFlowLayout>
                                         <cells>
                                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="AnimatedPreviewPopupCell" id="veE-be-cV0" customClass="AnimatedPreviewPopupCell" customModule="spriteMaker" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="80" width="129" height="74"/>
+                                                <rect key="frame" x="2.5" y="10" width="105.5" height="52"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="TyA-nu-t8h">
-                                                    <rect key="frame" x="0.0" y="0.0" width="129" height="74"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="105.5" height="52"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <subviews>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8j4-qZ-1cY">
-                                                            <rect key="frame" x="0.0" y="0.0" width="129" height="74"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="105.5" height="52"/>
                                                         </view>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wID-WZ-ATz">
-                                                            <rect key="frame" x="40.5" y="26.5" width="48.5" height="21.5"/>
+                                                            <rect key="frame" x="28.5" y="15.5" width="49" height="21.5"/>
                                                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="18"/>
                                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -90,36 +90,12 @@
                                                         <constraint firstItem="wID-WZ-ATz" firstAttribute="centerX" secondItem="8j4-qZ-1cY" secondAttribute="centerX" id="xsP-dH-iKK"/>
                                                     </constraints>
                                                 </collectionViewCellContentView>
-                                                <size key="customSize" width="129" height="74"/>
+                                                <size key="customSize" width="105.5" height="52"/>
                                                 <connections>
                                                     <outlet property="categoryLabel" destination="wID-WZ-ATz" id="kO7-yA-FsI"/>
                                                 </connections>
                                             </collectionViewCell>
                                         </cells>
-                                        <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="Header" id="Gve-Ok-Jzy">
-                                            <rect key="frame" x="0.0" y="0.0" width="129" height="70"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3XJ-Hu-e0J">
-                                                    <rect key="frame" x="13" y="7" width="103" height="56"/>
-                                                    <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="18"/>
-                                                    <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    <state key="normal" title="All">
-                                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    </state>
-                                                    <connections>
-                                                        <action selector="tappedResetButton:" destination="X4g-Ww-Kze" eventType="touchUpInside" id="ALC-CD-s22"/>
-                                                    </connections>
-                                                </button>
-                                            </subviews>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                            <constraints>
-                                                <constraint firstItem="3XJ-Hu-e0J" firstAttribute="centerY" secondItem="Gve-Ok-Jzy" secondAttribute="centerY" id="ACp-mu-Zf8"/>
-                                                <constraint firstItem="3XJ-Hu-e0J" firstAttribute="width" secondItem="Gve-Ok-Jzy" secondAttribute="width" multiplier="0.8" id="bhe-2q-Sn8"/>
-                                                <constraint firstItem="3XJ-Hu-e0J" firstAttribute="height" secondItem="Gve-Ok-Jzy" secondAttribute="height" multiplier="0.8" id="cf7-IE-14Q"/>
-                                                <constraint firstItem="3XJ-Hu-e0J" firstAttribute="centerX" secondItem="Gve-Ok-Jzy" secondAttribute="centerX" id="ipe-2d-VN7"/>
-                                            </constraints>
-                                        </collectionReusableView>
                                         <connections>
                                             <outlet property="dataSource" destination="X4g-Ww-Kze" id="rdp-8v-6U2"/>
                                             <outlet property="delegate" destination="X4g-Ww-Kze" id="OBj-mc-s5t"/>
@@ -129,11 +105,11 @@
                                 <color key="backgroundColor" red="0.1808672818" green="0.1808672818" blue="0.1808672818" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <gestureRecognizers/>
                                 <constraints>
-                                    <constraint firstItem="V81-g5-gZ6" firstAttribute="top" secondItem="Jxw-K6-M5b" secondAttribute="top" constant="10" id="3cK-6a-i31"/>
+                                    <constraint firstItem="V81-g5-gZ6" firstAttribute="top" secondItem="Jxw-K6-M5b" secondAttribute="top" id="3cK-6a-i31"/>
                                     <constraint firstItem="V81-g5-gZ6" firstAttribute="leading" secondItem="Jxw-K6-M5b" secondAttribute="leading" constant="10" id="J5O-Rb-CCc"/>
                                     <constraint firstAttribute="trailing" secondItem="V81-g5-gZ6" secondAttribute="trailing" constant="10" id="Y1X-WR-44V"/>
-                                    <constraint firstAttribute="bottom" secondItem="V81-g5-gZ6" secondAttribute="bottom" constant="10" id="ZXv-b4-JOV"/>
-                                    <constraint firstAttribute="width" secondItem="Jxw-K6-M5b" secondAttribute="height" multiplier="2:3" id="rSg-E2-edt"/>
+                                    <constraint firstAttribute="bottom" secondItem="V81-g5-gZ6" secondAttribute="bottom" id="ZXv-b4-JOV"/>
+                                    <constraint firstAttribute="height" constant="150" id="ySr-Lx-Nkh"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -144,7 +120,7 @@
                             <constraint firstItem="Jxw-K6-M5b" firstAttribute="leading" secondItem="Rmc-2h-XTw" secondAttribute="leading" constant="5" id="Bgd-sG-pr9"/>
                             <constraint firstItem="o6h-4e-373" firstAttribute="bottom" secondItem="Qrw-vm-1bE" secondAttribute="bottom" id="NxZ-H1-2JK"/>
                             <constraint firstItem="o6h-4e-373" firstAttribute="trailing" secondItem="Qrw-vm-1bE" secondAttribute="trailing" id="Sxq-ub-u96"/>
-                            <constraint firstItem="Jxw-K6-M5b" firstAttribute="width" secondItem="Rmc-2h-XTw" secondAttribute="width" multiplier="0.4" id="d93-aW-PIm"/>
+                            <constraint firstItem="Jxw-K6-M5b" firstAttribute="width" secondItem="Rmc-2h-XTw" secondAttribute="width" multiplier="0.35" id="d93-aW-PIm"/>
                             <constraint firstItem="Qrw-vm-1bE" firstAttribute="leading" secondItem="o6h-4e-373" secondAttribute="leading" id="qJJ-v0-fGP"/>
                             <constraint firstItem="Jxw-K6-M5b" firstAttribute="top" secondItem="Rmc-2h-XTw" secondAttribute="bottom" constant="5" id="y8g-LT-um9"/>
                         </constraints>
